--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
+    "@supabase/supabase-js": "^2.89.0",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.30",
     "expo-font": "~14.0.10",
