--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
-    "@supabase/supabase-js": "^2.89.0",
+    "@supabase/supabase-js": "^2.90.1",
     "babel-preset-expo": "~54.0.9",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.30",
     "expo-font": "~14.0.10",
+    "expo-image-picker": "^17.0.10",
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
