--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-deck-swiper": "^2.0.19",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-chat": "^3.2.3",
     "react-native-keyboard-controller": "1.18.5",
