--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@supabase/supabase-js": "^2.90.1",
-    "babel-preset-expo": "~54.0.9",
+    "babel-preset-expo": "~54.0.10",
     "dotenv": "^17.2.3",
-    "expo": "~54.0.30",
-    "expo-font": "~14.0.10",
+    "expo": "~54.0.33",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "^17.0.10",
     "expo-location": "~19.0.8",
-    "expo-notifications": "~0.32.15",
+    "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
