--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "rn-range-slider": "^2.2.2",
     "tailwindcss": "^3.4.19",
     "zustand": "^5.0.9"
   },
